Linke All Links in the sidebar in each page and create a test content within page

--- a/Front-End/src/css/sideBar.css
+++ b/Front-End/src/css/sideBar.css
@@ -7,8 +7,10 @@
     position: relative;
     background: var(--main-color) ;
     overflow: auto;
+    overflow-x: hidden;
     scrollbar-width: none;
 }
+
 
 .lists {
     position: absolute;
