--- a/Front-End/src/css/navBar.css
+++ b/Front-End/src/css/navBar.css
@@ -3,7 +3,8 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    padding: 10px;
+    padding: 2px 10px ;
+    
     box-shadow: 0 0 10px 1px gray;
 }
 
