--- a/Front-End/src/css/sideBar.css
+++ b/Front-End/src/css/sideBar.css
@@ -23,10 +23,9 @@
 .lists .list,
 .lists .main-list {
     position: relative;
-    padding: 12px 0px;
+    padding: 9px 0px;
     display: flex;
-    border-top-left-radius: 15px;
-    border-bottom-left-radius: 15px;
+    border-radius: 30px 0px 0px 30px;
     font-weight: 400;
     color: white;
     cursor: pointer;
@@ -35,7 +34,7 @@
 
 .lists i {
     position: relative;
-    font-size: 15px;
+    font-size: 14px;
     line-height: 25px;
     margin: 0 15px;
     pointer-events: none;
@@ -43,7 +42,7 @@
 
 .lists  p {
     position: relative;
-    font-size: 15px;
+    font-size: 14px;
     line-height: 25px;
     text-decoration: none;
     letter-spacing: 0.5px;
@@ -117,7 +116,7 @@
     position: relative;
     margin-left: 7px;
     overflow: hidden;
-    margin-top: 10px;
+    margin-top: 0px;
     margin-bottom: 10px;
     position: relative;
     /* transform: scaleY(0); */
@@ -128,6 +127,7 @@
 
 .lists .main-list.active + ul {
     height: 100%;
+    margin-top: 10px;
     /* transform: scale(1); */
 }
 
