--- a/Front-End/src/components/Global/Global.css
+++ b/Front-End/src/components/Global/Global.css
@@ -26,3 +26,25 @@
     bottom: -11px;
     left: -3px;
 }
+
+/* Notification */ 
+.notification {
+    position: absolute;
+    z-index: 100;
+    bottom: 20px;
+    right: 20px;
+    font-weight: 300  ;
+    padding: 10px 15px ;
+    color: white ;
+    border-radius: 3px ;
+    transform: scaleX(0);
+    transform-origin: left ;
+    transition: .4s;
+}
+
+.notification.success {
+    background-color: rgba(14, 233, 14, 0.801);
+}
+.notification.error {
+    background-color: rgba(233, 14, 14, 0.801);
+}
