complete build the new class page and class details

--- a/Front-End/src/components/Students/studentStyle.css
+++ b/Front-End/src/components/Students/studentStyle.css
@@ -205,6 +205,7 @@ input[type='submit']:hover {
 
 .student-card h3 span {
     margin-bottom: 5px;
+    text-transform: capitalize ;
     color: black;
     font-weight: 600;
     font-size: 16px;
