--- a/Front-End/src/components/Classes/class.css
+++ b/Front-End/src/components/Classes/class.css
@@ -65,7 +65,26 @@
     color: gray;
 }
 
+.update-class-btn {
+    padding: 5px 35px;
+    background-color: red;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    border: none;
+    border-radius: 3px;
+    margin-top: 20px;
+    font-weight: bold;
+    color: white;
+    margin-left: 10px;
+    transition: .4s;
+}
 
+.update-class-btn:hover {
+    background-color: white;
+    color: red;
+    box-shadow: 0 0 6px -1px rgba(0, 0, 0, 0.438);
+}
 /*  Class Card */
 .icon {
     font-size: 200px;
@@ -190,15 +209,14 @@
                 text-align: center;
 
                 h4 {
-                    font-size: 15px;
-                    line-height: -63px;
-                    padding: 0;
+                    font-size: 13px;
+                    color: rgb(160, 159, 159);
+                    font-weight: 500;
                 }
 
                 span {
-                    font-size: 13px;
-                    line-height: -13px;
-                    margin: 0;
+                    font-size: 18px;
+                    font-weight: 600;                    
                 }
             }
         }
@@ -235,6 +253,7 @@
     background-color: #ffffff;
     border-radius: 5px;
     font-weight: 400;
+    cursor: pointer;
     transition: .4s;
     user-select: none;
 }
