--- a/Front-End/src/components/Subjects/subject.css
+++ b/Front-End/src/components/Subjects/subject.css
@@ -4,6 +4,7 @@
     gap: 20px;
     flex-wrap: wrap;
     margin-top: 2em;
+    justify-content: flex-start;
 }
 
 .sub-header {
@@ -23,10 +24,10 @@
     overflow: hidden;
     border-radius: 5px;
     gap: 10px;
-    box-shadow: 0 0 10px -5px gray ;
     padding-bottom: 15px;
     -webkit-backface-visibility: hidden; 
     backface-visibility: hidden; 
+    box-shadow: 0 0 12px -6px gray;
 }
 
 .subject-card .delete-btn ,
@@ -57,7 +58,8 @@
 }
 
 .empty-subject-card {
-    min-width: 150px;
+    min-width: 160px;
+    min-height: 160px;
     border-radius: 5px;
     border: 2px dashed gray;
     display: flex;
@@ -66,14 +68,14 @@
     color: gray;
     font-size: 45px;
     cursor: pointer;
-    min-height: 150px;
+    align-self: flex-start;
 }
 
 .flip-card {
     background-color: transparent;
-    perspective: 1000px; 
+    perspective: 1000px;  
     min-width: 160px;
-    min-height: 150px;
+    min-height: 200px;
 }
 
 .flip-card-inner {
@@ -87,13 +89,12 @@
 
 .update-card {
     position: absolute;    
-    box-shadow: 0 0 10px -5px gray ;
     padding-bottom: 15px;
-    width: 100%;
-    height: 100%;
     transform: rotateY(180deg);
     -webkit-backface-visibility: hidden; 
     backface-visibility: hidden; 
+    background-color: white;
+    box-shadow: 0 0 12px -6px gray;
 }
 
 .subject-info .input {
