--- a/Front-End/src/components/Students/studentStyle.css
+++ b/Front-End/src/components/Students/studentStyle.css
@@ -6,9 +6,12 @@ table {
 
 table td,
 table th {
-    border-top: 1px solid #ddd;
     text-align: center;
     padding: 8px;
+}
+
+table tr:not(:first-child) td {
+    border-top: 1px solid #ddd;
 }
 
 table th {
