build teacher class page and some fix on the application

--- a/Front-End/src/components/Students/studentStyle.css
+++ b/Front-End/src/components/Students/studentStyle.css
@@ -169,7 +169,14 @@ input[type='submit'] ,
     color: white;
     transition: .4s;
 }
+.update-class-btn {
+    color: white !important;
+}
 
+.update-class-btn:hover {
+    color: red !important;
+
+}
 input[type='submit']:hover {
     background-color: white;
     color: #066599;
