--- a/Front-End/src/components/Bills/StudentsPaysCom/studnetPays.css
+++ b/Front-End/src/components/Bills/StudentsPaysCom/studnetPays.css
@@ -14,6 +14,7 @@
     border-radius: 50%;
     top: 50%;
     transform: translateY(-50%);
+    
 }
 
 .students-pays-header::after {
@@ -158,4 +159,17 @@
 
 .error {
     border-bottom-color: red !important;
+}
+
+
+.hovering-row:nth-child(odd) {
+    background-color: white;
+}
+
+.hovering-row:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+.hovering-row:hover {
+    background-color: #e6e6e6;
 }
