--- a/Front-End/src/components/Global/Global.css
+++ b/Front-End/src/components/Global/Global.css
@@ -4,6 +4,17 @@
     position: relative;
     margin: 10px 0 15px 0 ;
     padding-bottom: 3px;
+    animation: title .5s ease-in;
+}
+@keyframes title {
+    0% {
+        opacity: 0.7;
+        transform: translateY(5px);
+    }
+    100% {
+        opacity: 1;
+        transform: none;
+    }
 }
 
 .title::before {
@@ -11,11 +22,24 @@
     content: '';
     position: absolute;
     height: 3px;
-    width: 4.2em;
+    width: 0;
     bottom: -5px;
     margin-bottom: 5px 0;
     border-radius: 5px;
+    animation: title-line .5s ease-in;
+    animation-delay: .6s;
+    animation-fill-mode: forwards;
 }
+
+@keyframes title-line  {
+    0% {
+        width: 0;
+    }
+    100% {
+        width: 4.2em;
+    }
+}
+
 .title::after {
     content: '';
     position: absolute;
@@ -26,6 +50,19 @@
     border: 2px solid #066599;
     bottom: -11px;
     left: -3px;
+    animation: title-line-2 .1s ease-in;
+    animation-delay: .5s;
+    animation-fill-mode: forwards;
+    opacity: 0;
+}
+
+@keyframes title-line-2  {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 /* Notification */ 
