--- a/Front-End/src/components/NavBar/navBar.css
+++ b/Front-End/src/components/NavBar/navBar.css
@@ -5,7 +5,7 @@
     width: 100%;
     padding: 2px 10px ;
     position: sticky;
-    top: 0;
+    top: 0px;
     z-index: 100;
     box-shadow: 0 -5px 10px 1px gray;
     background-color: white;
