--- a/Front-End/src/components/NavBar/navBar.css
+++ b/Front-End/src/components/NavBar/navBar.css
@@ -35,10 +35,10 @@
 
     h4 {
         font-size: 18px;
-    }
 
-    h3 {
-        font-size: 20px;
+        span {
+            font-size: 20px;
+        }
     }
 }
 
